@@ -422,10 +422,7 @@ Continue       :c       switch off single step mode, continue evaluation
              ;; T -> #<EOF>
              ;; NIL -> form is already evaluated
              ;;        result has been printed
-             (if (interactive-stream-p *standard-input*)
-               (exit)           ; user typed EOF
-               (progn (setq *command-index* 0) ; reset *command-index*
-                      (return-from main-loop))))))))) ; and proceed
+             (exit)))))))
 
 (setq *driver* #'main-loop)
 
